made Welcome page and a rough idea of mainActivity, welcome page = it saved user name in sharedpreferences and use that data to show the name and greet the player, mainActivity = right now it keeps track of turn of player 1 and player 2. working on keeping track of when the game is over(DRAW)
TODO: function for win condition

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">TicTacToe</string>
+    <string name="welcome_n_user">Welcome\n</string>
+    <string name="your_name">Your Name</string>
+    <string name="submit">Submit</string>
+    <string name="play">Play</string>
+    <string name="player_1">Player 1</string>
+    <string name="player_2">Player 2</string>
+    <string name="_0">-</string>
 </resources>
